feat: orders manipulating received payment data from RabbitMQ message